--- a/rute.html
+++ b/rute.html
@@ -47,24 +47,29 @@
         </div>
         <div class="pilihan-rute">
             <ul>
-                <a target="_blank" href="">
+                <a target="_blank" href="pict/peta_mrt.jpg">
                     <li class="rute-icon">
                         <img class="gambar" src="pict/MRT_Jakarta_logo_vertical.png" alt="MRT" srcset="">
                     </li>
                 </a>
-                <a target="_blank" href="">
+                <a target="_blank" href="pict/peta_krl.jpg">
                     <li class="rute-icon">
                         <img class="gambar" src="pict/krl.jpg" alt="KRL" srcset="">
                     </li>
                 </a>
-                <a target="_blank" href="">
+                <a target="_blank" href="pict/Integrasi.jpg">
                     <li class="rute-icon">
                         <img class="gambar" src="pict/tj.png" alt="Transjakarta">
                     </li>
                 </a>
-                <a target="_blank" href="">
+                <a target="_blank" href="pict/Integrasi.jpg">
                     <li class="rute-icon">
                         <img class="gambar" src="pict/lrt.png" alt="LRT">
+                    </li>
+                </a>
+                <a target="_blank" href="pict/Integrasi.jpg">
+                    <li class="rute-icon">
+                        <img class="gambar" src="pict/jaklingko.png" alt="LRT">
                     </li>
                 </a>
             </ul>
