benerin bug + footer form email kepanjangan

--- a/artikel_budaya.html
+++ b/artikel_budaya.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seputar Jakarta</title>
+    <title>Ondel-ondel</title>
      <!--Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
      <!--CSS-->
@@ -30,7 +30,7 @@
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="sejarah.html" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
-                <li><a href="wisata.html" class="link-navigation-1-wisata">Wisata</a></li>
+                <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
                 <li><a href="rute.html" class="link-navigation-1">Rute</a></li>
                 <li><a href="kuliner.html" class="link-navigation-1">Kuliner</a></li>
             </ul>
