--- a/artikel_sejarah.html
+++ b/artikel_sejarah.html
@@ -65,7 +65,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/batavia-tempo-dulu.png" alt="Peta Batavia" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
@@ -91,7 +91,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/batavia-tempo-dulu.png" alt="Peta Batavia" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
@@ -117,7 +117,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/batavia-tempo-dulu.png" alt="Peta Batavia" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
@@ -143,7 +143,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/batavia-tempo-dulu.png" alt="Peta Batavia" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
