--- a/sejarah.html
+++ b/sejarah.html
@@ -53,7 +53,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/batavia-tempo-dulu.png" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -87,7 +87,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/batavia-tempo-dulu.png" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -121,7 +121,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/batavia-tempo-dulu.png" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -155,7 +155,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/batavia-tempo-dulu.png" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -189,7 +189,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/batavia-tempo-dulu.png" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -223,7 +223,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/batavia-tempo-dulu.png" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
