--- a/kuliner.html
+++ b/kuliner.html
@@ -53,7 +53,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_kuliner.html">
-                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -72,7 +72,7 @@
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : nanzzz</p>
                     </div>
                     <div class="text-content-main">
                         <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
@@ -88,7 +88,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_kuliner.html">
-                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -107,7 +107,7 @@
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : nanzzz</p>
                     </div>
                     <div class="text-content-main">
                         <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
@@ -123,7 +123,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_kuliner.html">
-                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -142,7 +142,7 @@
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : nanzzz</p>
                     </div>
                     <div class="text-content-main">
                         <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
@@ -158,7 +158,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_kuliner.html">
-                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -177,7 +177,7 @@
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : nanzzz</p>
                     </div>
                     <div class="text-content-main">
                         <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
@@ -193,7 +193,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_kuliner.html">
-                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -212,7 +212,7 @@
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : nanzzz</p>
                     </div>
                     <div class="text-content-main">
                         <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
@@ -228,7 +228,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_kuliner.html">
-                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -247,7 +247,7 @@
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : nanzzz</p>
                     </div>
                     <div class="text-content-main">
                         <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
