--- a/artikel_kuliner.html
+++ b/artikel_kuliner.html
@@ -46,7 +46,7 @@
             <div class="judul-main">
                 <h1>Gurih dan Legitnya Kerak Telor, Makanan Khas Jakarta</h1>
                 <div class="creator">
-                    <p>Penulis : yunpnzr pada 19 November 2022</p>
+                    <p>Penulis : nanzzz pada 17 Desember 2022</p>
                 </div>
             </div>
 
@@ -55,6 +55,7 @@
                 <div class="card-nama">
                     <h3>Tentang Penulis</h3>
                     <img src="pict/amin_richman.jpeg" alt="" srcset="">
+                    <h4>nanzzz</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <hr>
@@ -64,7 +65,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
@@ -91,7 +92,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
@@ -118,7 +119,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
@@ -145,7 +146,7 @@
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
                             <a href="artikel_wisata.html">
-                                <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                                <img src="pict/keraktelor.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
                         <div class="text-content-wisata">
