--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                             <div class="card">
                                 <div class="image-wrapper">
                                     <a href="artikel_kuliner.html">
-                                        <img src="pict/kerak_telor_crop.jpg" alt="batavia">
+                                        <img src="pict/keraktelor.jpg" alt="batavia">
                                     </a>
                                 </div>
                                 <div class="card-body">
@@ -594,7 +594,7 @@
                             <div class="card">
                                 <div class="image-wrapper">
                                     <a href="artikel_kuliner.html">
-                                        <img src="pict/kerak_telor_crop.jpg" alt="batavia">
+                                        <img src="pict/keraktelor.jpg" alt="batavia">
                                     </a>
                                 </div>
                                 <div class="card-body">
@@ -607,7 +607,7 @@
                             <div class="card">
                                 <div class="image-wrapper">
                                     <a href="artikel_kuliner.html">
-                                        <img src="pict/kerak_telor_crop.jpg" alt="batavia">
+                                        <img src="pict/keraktelor.jpg" alt="batavia">
                                     </a>
                                 </div>
                                 <div class="card-body">
@@ -628,7 +628,7 @@
                             <div class="card">
                                 <div class="image-wrapper">
                                     <a href="artikel_kuliner.html">
-                                        <img src="pict/kerak_telor_crop.jpg" alt="batavia">
+                                        <img src="pict/keraktelor.jpg" alt="batavia">
                                     </a>
                                 </div>
                                 <div class="card-body">
@@ -641,7 +641,7 @@
                             <div class="card">
                                 <div class="image-wrapper">
                                     <a href="artikel_kuliner.html">
-                                        <img src="pict/kerak_telor_crop.jpg" alt="batavia">
+                                        <img src="pict/keraktelor.jpg" alt="batavia">
                                     </a>
                                 </div>
                                 <div class="card-body">
@@ -654,7 +654,7 @@
                             <div class="card">
                                 <div class="image-wrapper">
                                     <a href="artikel_kuliner.html">
-                                        <img src="pict/kerak_telor_crop.jpg" alt="batavia">
+                                        <img src="pict/keraktelor.jpg" alt="batavia">
                                     </a>
                                 </div>
                                 <div class="card-body">
